# PyPrune

./: README.md  requirements.txt  setup.cfg
scripts/: resnet_example.py
src/pyprune/: main.py  onnx_module.py  prune.py  quantization.py
