[metadata]
name = pyprune
version = 0.0.1
author = Mohammed Fellaji
author_email = fellajimohammed@gmail.com
description = A package to prune model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fellajimed/PyPrune
project_urls =
    Bug Tracker = https://github.com/fellajimed/PyPrune/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyprune = pyprune.main:main
